--- a/index.html
+++ b/index.html
@@ -1,3 +1,69 @@
+<!DOCTYPE html>
+
 <html>
-  <title>RPS</title>
+  <head>
+    <title>RPS</title>
+  </head>
+<body>
+  <p>Rock Paper Scissors!!!</p>
+  <button onclick="
+  const randomNumber=Math.random();
+  let rps='';
+  let r='';
+  if(randomNumber>=0 && randomNumber<=1/3){
+  rps='Rock';
+  r='Tie';
+  alert('Computer chose Rock \t' + r);
+  }
+  else if(randomNumber>=1/3 && randomNumber<=2/3){
+  rps='Paper';
+  r='Computer won';
+  alert('Computer chose Paper \t'+r);
+  }
+  else if(randomNumber>=2/3 && randomNumber<=1){
+  rps='Scissors';
+  r='Computer won';
+    alert('Computer chose Scissors \t'+r);
+  }
+
+  ">Rock</button>
+  <button onclick="
+  const randomNumber2=Math.random();
+  let rps2='';
+  let r2='';
+  if(randomNumber2>=0 && randomNumber2<=1/3){
+  rps2='Rock';
+  r2='Computer won';
+  alert('Computer chose Rock \t' + r2);
+  }
+  else if(randomNumber2>=1/3 && randomNumber2<=2/3){
+  rps2='Paper';
+  r2='Tie';
+  alert('Computer chose Paper \t'+r2);
+  }
+  else if(randomNumber2>=2/3 && randomNumber2<=1){
+  rps2='Scissors';
+  r2='You won';
+    alert('Computer chose Scissors \t'+r2);
+  }">Paper</button>
+  <button onclick="
+  const randomNumber3=Math.random();
+  let rps3='';
+  let r3='';
+  if(randomNumber3>=0 && randomNumber3<=1/3){
+  rps3='Rock';
+  r3='Computer won';
+  alert('Computer chose Rock \t' + r3);
+  }
+  else if(randomNumber3>=1/3 && randomNumber3<=2/3){
+  rps3='Paper';
+  r3='You won';
+  alert('Computer chose Paper \t'+r3);
+  }
+  else if(randomNumber3>=2/3 && randomNumber3<=1){
+  rps3='Scissors';
+  r3='Tie';
+    alert('Computer chose Scissors \t'+r3);
+  }">Scissors</button>
+</body>
 </html>
