--- a/index.html
+++ b/index.html
@@ -7,69 +7,21 @@
 <body>
     <p>Rock Paper Scissors!!!</p>
     <button onclick="
-      const randomNumber=Math.random();
-      let rps='';
-      let r='';
-      if(randomNumber>=0 && randomNumber<=1/3){
-      rps='Rock';
-      r='Tie';
-      alert('Computer chose Rock \t' + r);
-      }
-      else if(randomNumber>=1/3 && randomNumber<=2/3){
-      rps='Paper';
-      r='Computer won';
-      alert('Computer chose Paper \t'+r);
-      }
-      else if(randomNumber>=2/3 && randomNumber<=1){
-      rps='Scissors';
-      r='Computer won';
-        alert('Computer chose Scissors \t'+r);
-      }
-
+      rps('Rock');
     ">Rock</button>
     <button onclick="
-      randomNumber=Math.random();
-      rps='';
-      r='';
-      if(randomNumber>=0 && randomNumber<=1/3){
-      rps='Rock';
-      r='Computer won';
-      alert('Computer chose Rock \t' + r);
-      }
-      else if(randomNumber>=1/3 && randomNumber<=2/3){
-      rps='Paper';
-      r='Tie';
-      alert('Computer chose Paper \t'+r);
-      }
-      else if(randomNumber>=2/3 && randomNumber<=1){
-      rps='Scissors';
-      r='You won';
-        alert('Computer chose Scissors \t'+r);
-      }">Paper</button>
+      rps('Paper');
+      ">Paper</button>
     <button onclick="
-      randomNumber=Math.random();
-      rps='';
-      r='';
-      if(randomNumber>=0 && randomNumber<=1/3){
-      rps='Rock';
-      r='Computer won';
-      alert('Computer chose Rock \t' + r);
-      }
-      else if(randomNumber>=1/3 && randomNumber<=2/3){
-      rps='Paper';
-      r='You won';
-      alert('Computer chose Paper \t'+r);
-      }
-      else if(randomNumber>=2/3 && randomNumber<=1){
-      rps='Scissors';
-      r='Tie';
-        alert('Computer chose Scissors \t'+r);
-      }">Scissors</button>
+      rps('Scissors');
+      ">Scissors</button>
 
     <script>
       function rps(inputUser){
-        randomNumber=Math.random();
-        rps='';
+        let ys=0;
+        let cs=0;
+        let randomNumber=Math.random();
+        let rps='';
         r='';
         if(randomNumber>=0 && randomNumber<=1/3){
         rps='Rock';
@@ -81,33 +33,16 @@
         rps='Scissors';
         }
 
-        if(inputUser==='Rock' && rps==='Rock'){
+        if(inputUser===rps){
           alert(`Computer chose ${rps} => Tie`);
+          ys
         }
-        else if(inputUser==='Rock' && rps==='Paper'){
+        else if(inputUser==='Rock' && rps==='Paper' || (inputUser==='Paper' && rps==='Scissors') || (inputUser==='Scissors' && rps==='Rock')){
           alert(`Computer chose ${rps} => Computer won`);
         } 
-        else if(inputUser==='Rock' && rps==='Scissors'){
-          alert(`Computer chose ${rps} => You won`);
-        } 
-        else if(inputUser==='Paper' && rps==='Rock'){
+        else{
           alert(`Computer chose ${rps} => You won`);
         }
-        else if(inputUser==='Paper' && rps==='Paper'){
-          alert(`Computer chose ${rps} => Tie`);
-        } 
-        else if(inputUser==='Paper' && rps==='Scissors'){
-          alert(`Computer chose ${rps} => Computer won`);
-        }
-        if(inputUser==='Scissors' && rps==='Rock'){
-          alert(`Computer chose ${rps} => Computer won`);
-        }
-        else if(inputUser==='Scissors' && rps==='Paper'){
-          alert(`Computer chose ${rps} => You won`);
-        } 
-        else if(inputUser==='Scissors' && rps==='Scissors'){
-          alert(`Computer chose ${rps} => Tie`);
-        } 
       
       }
       </script>
