--- a/index.html
+++ b/index.html
@@ -1,50 +1,242 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<html>
-  <head>
-    <title>RPS</title>
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rock Paper Scissors</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+    rel="stylesheet">
+</head>
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'fira sans';
+  }
+
+  body {
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    color: #333;
+    text-align: center;
+  }
+
+  h1 {
+    margin-bottom: 20px;
+    font-size: 3rem;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 50px;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: 50px;
+  }
+
+  button {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 30px;
+    font-size: 1.2rem;
+    font-weight: bold;
+    border: none;
+    border-radius: 12px;
+    cursor: pointer;
+    transition: transform 0.2s, box-shadow 0.2s;
+    width: 120px;
+    height: 120px;
+    background-color: #fff;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  }
+
+  button img {
+    margin-top: 40px;
+  }
+
+  button:hover {
+    color: black;
+    /* neon yellow-green */
+    box-shadow: 0 0 5px black,
+      0 0 10px black,
+      0 0 20px black,
+      0 0 40px black;
+  }
+
+  .choices {
+    margin-top: 50px;
+    display: flex;
+    flex-direction: row;
+    gap: 150px;
+  }
+
+  .rock {
+    padding-top: 25px;
+  }
+
+  #result {
+    margin-top: 60px;
+  }
+
+  h3 {
+    padding-top: 15px;
+  }
+
+  .title {
+    margin-top: 30px;
+    font-size: 50px;
+  }
+
+  button img {
+    width: 100px;
+  }
+
+  .choice-box img {
+    max-width: 200px;
+  }
+
+  @keyframes shake {
+    0% {
+      transform: translateY(0px);
+    }
+
+    25% {
+      transform: translateY(-10px);
+    }
+
+    50% {
+      transform: translateY(10px);
+    }
+
+    75% {
+      transform: translateY(-10px);
+    }
+
+    100% {
+      transform: translateY(0px);
+    }
+  }
+  #score{
+    padding-top: 15px;
+  }
+
+  .shaking {
+    animation: shake 0.5s infinite;
+  }
+</style>
+
 <body>
-    <p>Rock Paper Scissors!!!</p>
+  <p class="title">Rock Paper Scissors!!!</p>
+  <div class="buttons">
     <button onclick="
       rps('Rock');
-    ">Rock</button>
+    ">
+      <img src="images/rock.png" alt="Rock">
+      <h3 class="rock">Rock</h3>
+    </button>
     <button onclick="
       rps('Paper');
-      ">Paper</button>
+      ">
+      <img src="images/paper.png" alt="Paper">
+      <h3>Paper</h3>
+    </button>
     <button onclick="
       rps('Scissors');
-      ">Scissors</button>
+      ">
+      <img src="images/scissors.png" alt="Scissors">
+      <h3>Scissors</h3>
+    </button>
+  </div>
+  <div class="choices">
+    <div class="choice-box">
+      <h3>You</h3>
+      <img id="userChoice" src="images/rock.png" alt="You">
+    </div>
+    <div class="choice-box">
+      <h3>Computer</h3>
+      <img id="computerChoice" src="images/rock.png" alt="Computer">
+    </div>
+  </div>
 
-    <script>
-      function rps(inputUser){
-        let ys=0;
-        let cs=0;
-        let randomNumber=Math.random();
-        let rps='';
-        r='';
-        if(randomNumber>=0 && randomNumber<=1/3){
-        rps='Rock';
-        }
-        else if(randomNumber>=1/3 && randomNumber<=2/3){
-        rps='Paper';
-        }
-        else if(randomNumber>=2/3 && randomNumber<=1){
-        rps='Scissors';
-        }
 
-        if(inputUser===rps){
-          alert(`Computer chose ${rps} => Tie`);
-          ys
-        }
-        else if(inputUser==='Rock' && rps==='Paper' || (inputUser==='Paper' && rps==='Scissors') || (inputUser==='Scissors' && rps==='Rock')){
-          alert(`Computer chose ${rps} => Computer won`);
-        } 
-        else{
-          alert(`Computer chose ${rps} => You won`);
-        }
+  <p id="result">Choose Rock, Paper, or Scissors to start!</p>
+  <div id="score">
+    <p>You: <span id="ys">0</span> | Computer: <span id="cs">0</span></p>
+  </div>
+
+
+  </div>
+  <script>
+    let ys = 0;
+    let cs = 0;
+    function rps(inputUser) {
       
+      let randomNumber = Math.random();
+      let rps = '';
+      let r = '';
+      if (randomNumber >= 0 && randomNumber <= 1 / 3) {
+        rps = 'Rock';
       }
-      </script>
+      else if (randomNumber >= 1 / 3 && randomNumber <= 2 / 3) {
+        rps = 'Paper';
+      }
+      else if (randomNumber >= 2 / 3 && randomNumber <= 1) {
+        rps = 'Scissors';
+      }
+
+
+      const userImg = document.getElementById('userChoice');
+      const compImg = document.getElementById('computerChoice');
+
+      // Add shake
+      userImg.classList.add('shaking');
+      compImg.classList.add('shaking');
+
+      // Set default hand during shake
+      userImg.src = 'images/rock.png';
+      compImg.src = 'images/rock.png';
+
+      // After 1 second, show final choices
+      setTimeout(() => {
+        userImg.classList.remove('shaking');
+        compImg.classList.remove('shaking');
+
+        userImg.src = `images/${inputUser.toLowerCase()}.png`;
+        compImg.src = `images/${rps.toLowerCase()}.png`;
+
+        if (inputUser === rps) {
+          r = `Computer chose ${rps} => Tie`;
+        }
+        else if (inputUser === 'Rock' && rps === 'Paper' || (inputUser === 'Paper' && rps === 'Scissors') || (inputUser === 'Scissors' && rps === 'Rock')) {
+          r = `Computer chose ${rps} => Computer won`;
+          cs++;
+        }
+        else {
+          r = `Computer chose ${rps} => You won`;
+          ys++;
+        }
+
+        document.getElementById('ys').textContent = ys;
+        document.getElementById('cs').textContent = cs;
+
+        document.getElementById('result').textContent = r;
+      }, 1000);
+
+    }
+  </script>
 </body>
+
 </html>
